fixed the header alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,19 +15,22 @@ a:hover {
 
 
 .header {
-  vertical-align: middle;
+
+  position: relative;
   width: 100%;
   height: 100px;
 }
 
 .right {
-  float: right;
   padding-right: 15px;
+  float: right;
+  height: 20px;
 }
 
 .left {
   padding-left: 15px;
   float: left;
+  height: 20px;
 }
 
 center {
